Revision history for Dinotrace

The contributors that suggested a given feature are shown in [].
	
* Dinotrace 9.3***

****	Fix dinotrace.el complaint about bad verilog-mode.el version.
	[Joseph Holtgrefe]

****	Fix core dump when no fonts are available.  [Dmitri Belimov]

* Dinotrace 9.3b 3/13/2006

***	Fix line number incrementing in Verilog errors. [Uwe Bonnes]

* Dinotrace 9.3a 06/13/2005

***	Fix too small buttons under openmotif.

***	Fix missing keyboard accelerators under openmotif.

* Dinotrace 9.2b 05/03/2005

***	The default extension for Verilog dumps is now .vcd instead of .dmp.

****    Fix traces containing only real numbers.  [Vitor Antunes]

****	Fix segfault when doing signal adds.  [Guy Hutchinson]

* Dinotrace 9.2a 12/20/2004

**      NEWS file is now renamed Changes.

**	Added signal note and cursor note menu items.  [Shane Coffman]

**	Searching for a non-vector signal will now return a vectored signal.
	For example a pattern "Foo" will find "Foo[1:0]."  [Shane Coffman]

****	Save cursor notes in Customize save files.  [Thomas Dmukauskas]

****	Fix compilation errors on GCC 3.4.  [Jaroslaw Gorny]

****	Fix segfault when using grid timerep without grid. [Scott Venier]

* Dinotrace 9.1n 10/22/2004

****	Fix slow file reading with >128 bit __en signals. [Ta-Chung Chang]

****	Fix signed analog display.  [Uwe Bonnes]

* Dinotrace 9.1m 04/21/2004

***	Fix duplicate and embeded __en cosmos signals. [Krishna Rangan]

****	Fix buffer overrun bugs.  [Samuel Ho]

* Dinotrace 9.1k 06/06/2003

****	Fix crash with busses that are replicated with different widths.

* Dinotrace 9.1j 03/22/2003

****	When window is resized, keep same percentage of trace visible.

****	Fix File Reread duplicating signals.  [Uwe Bonnes]

****	Fix File Reread with identically named signals.

****	Fix dropping of 0s on signals > 32 bits. [Jason Mancini]

****	Fix coredump on read and GCC 3.2.  [Jason Mancini]

* Dinotrace 9.1i  03/07/2003
