@@ -1,4 +1,2 @@
 Makefile
 config.h
-dinodoc.h
-dist_date.h
